--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "plataforma de intercambio de video curso alura",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:db": "npx json-server --watch db.json --port 3001"
   },
   "author": "mari",
   "license": "ISC",
